3차 수정(index.html 수정) 2020.06.25

--- a/portfolio/WebContent/index.html
+++ b/portfolio/WebContent/index.html
@@ -145,9 +145,9 @@
           </div>
           
           <div class="col-md-7 pt-4">
-            <h3>오프라인 모임 플랫폼 "속닥속닥"t</h3>
+            <h3>Spring </h3>
             <p class="font-italic">
-              Spring Projec
+              Projec오프라인 모임 플랫폼 "속닥속닥"
             </p>
             <ul>
 				<li><i class="icofont-check"></i> 공통의 관심사를 가진 사람들의 <b>오프라인 모임을 중계</b>해주는 웹 어플리케이션</li>
@@ -177,9 +177,9 @@
             <img src="assets/img/jsp_main.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
-            <h3>영화관 통합 예매 사이트 "쌍용시네마"</h3>
+            <h3>JSP Project</h3>
             <p class="font-italic">
-              JSP Project
+              영화관 통합 예매 사이트 "쌍용시네마"
             </p>
             
             <ul>
