5차 수정(index.html) 2020.06.28(일)

--- a/portfolio/WebContent/index.html
+++ b/portfolio/WebContent/index.html
@@ -68,13 +68,13 @@
    				<p>
 		          	안녕하세요.
 		          	<br/><br/>
-					소통하는 개발자가 되고 싶은 최세희입니다.
+					웹 개발 직무에 지원한 최세희입니다.
 					<br/><br/>
-					멀티미디어학과를 전공하고 국비지원교육으로 Java&Python 기반 응용SW 개발자 양성 과정을 수료하며 프로그래밍 지식을 쌓기 위해 노력하였습니다.<br/> 
+					멀티미디어학과를 전공하고 국비지원교육으로 Java&Python 기반 응용SW 개발자 양성 과정을 수료하며 프로그래밍 지식을 쌓기 위해 노력하였습니다.<br/>
 					또한 대학생 때 교내 원격평생교육원, 체육관, ROTC 부서 등에서 근로장학생으로 근무하며 개발자의 업무 처리에 필수요소라고 생각되는 의사소통 능력을 길렀습니다.
 					<br/><br/>
-					프로젝트를 진행하며 많은 시행착오를 겪었지만 목표로 한 기능들을 하나씩 구현해나가면서 개발 실력을 향상시킴과 동시에 큰 성취감을 느꼈습니다.<br/>  
-					그 성취감이 프로그래밍에 더욱 열정을 갖게 하였고 그 열정을 가지고 끊임없이 노력하는 프로그래머가 될 것입니다.
+					프로젝트를 진행하며 많은 시행착오를 겪었지만 목표로 한 기능들을 하나씩 구현해나가면서 개발 실력을 향상시킴과 동시에 큰 성취감을 느꼈습니다.<br/>
+					성취감이 프로그래밍에 더욱 열정을 갖게 하였고 그 열정을 가지고 끊임없이 노력하는 프로그래머가 될 것입니다.
 				</p>
         	</div>	
         	
