5차 수정(index.html) 2020.06.28(일)

--- a/portfolio/WebContent/index.html
+++ b/portfolio/WebContent/index.html
@@ -136,9 +136,9 @@
           </div>
           
           <div class="col-md-7 pt-4">
-            <h3>Spring </h3>
+            <h3>Spring Projec</h3>
             <p class="font-italic">
-              Projec오프라인 모임 플랫폼 "속닥속닥"
+              오프라인 모임 플랫폼 "속닥속닥"
             </p>
             <ul>
 				<li><i class="icofont-check"></i> 공통의 관심사를 가진 사람들의 <b>오프라인 모임을 중계</b>해주는 웹 어플리케이션</li>
