7차 수정(index.html) 2020.06.28(일)

--- a/portfolio/WebContent/index.html
+++ b/portfolio/WebContent/index.html
@@ -136,7 +136,7 @@
           </div>
           
           <div class="col-md-7 pt-4">
-            <h3>Spring Projec</h3>
+            <h3>Spring Project</h3>
             <p class="font-italic">
               오프라인 모임 플랫폼 "속닥속닥"
             </p>
