--- a/portfolio/WebContent/index.html
+++ b/portfolio/WebContent/index.html
@@ -74,7 +74,7 @@
 					또한 대학생 때 교내 원격평생교육원, 체육관, ROTC 부서 등에서 근로장학생으로 근무하며 개발자의 업무 처리에 필수요소라고 생각되는 의사소통 능력을 길렀습니다.
 					<br/><br/>
 					프로젝트를 진행하며 많은 어려움을 겪었지만 목표한 기능들을 하나씩 구현해나가면서 개발 실력을 향상시킴과 동시에 큰 성취감을 느꼈습니다.<br/>
-					성취감을 통해 프로그래밍에 더욱 열정을 갖게 되었고 그 열정을 가지고 끊임없이 노력하는 프로그래머가 될 것입니다.
+					성취감을 통해 프로그래밍에 더욱 열정을 갖게 되었고 끊임없이 노력하는 프로그래머가 되고 싶습니다.
 				</p>
         	</div>	
         	
@@ -98,6 +98,7 @@
 			<ul>
 				<li>Java</li>
 				<li>C++</li>
+				<li>C#</li>
 				<li>JSP/Servlet</li>
 				<li>Spring/MyBatis</li>
 				<li>Python</li>
